--- a/rxjs-app/package.json
+++ b/rxjs-app/package.json
@@ -2,7 +2,6 @@
   "name": "rxjs-app",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -36,5 +35,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+
+  "proxy": "https://pixabay.com/api/"
 }
