--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+**/.idea
+
 # dependencies
 **/node_modules
 **/.pnp
@@ -23,3 +25,4 @@ yarn-debug.log*
 yarn-error.log*
 
 Key.js
+Key.java
