--- a/webflux-server/pom.xml
+++ b/webflux-server/pom.xml
@@ -73,6 +73,14 @@
             <version>2.8.7</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.7.2</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
